--- a/deploy.yml
+++ b/deploy.yml
@@ -11,7 +11,8 @@ services:
      - "MONIKER=" # node name (If it is not difficult, specify Akash in the node name, for example:DimokusAkash). имя ноды (Если нетрудно, укажите в имени ноды Akash, например:DimokusAkash)
      - "MNEMONIC=" # seed phrase from the wallet. seed фраза от кошелька .
      #- "LINK_KEY=" # link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets. ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos.
-     - "PEER=223e39487e0e363833f19ead57c3bb98303730f9@116.202.112.175:26601,2e0623d133e8da778e379b01ea0b8cb477f5b346@135.181.116.109:38456,61db8ce4cf4e9c0cbbb9bfb4c90ae6d02c17d6bd@138.201.139.175:20456,eed0ef9a854fd601401d5484d64cb3e0b02a955b@144.126.135.27:46656,5cea05a8c5dffacd0ce022e1726734a0d8cbfdca@62.141.39.178:26656,1003cf3b68ddfd3a55bb20f5c6041c1efe2e52eb@65.21.143.79:21556,d8d619448fef295ac11463b834b4a169dbf8f9ba@135.181.47.192:26656,ebeca6a40fba2c3a3aa5a9c99d9222163bd6d4c6@95.216.154.164:26656,927cc47316c0530b54a711e601b14a1fb24c0153@62.171.128.66:26656"
+     - "SNAP_RPC=http://157.245.76.119:26657"
+     - "PEER=dce45627fce95b5eacc9b931fab5afe70d70e917@135.181.204.159:26656,f64dd167410a242c993648faa6406edf74a7f4b7@157.245.76.119:26656,8fa034efbc4712dfdf656d87036ff80af30a388e@65.108.88.27:26656,4a061ae8ac77422387139fddc2a3d0f9423642c9@217.79.180.189:26656,b2b71c57a8e13114117d59b5c088329641b77b02@194.163.171.222:26656"
      
     expose:
       - port: 80
