--- a/deploy.yml
+++ b/deploy.yml
@@ -3,16 +3,16 @@ version: "2.0"
 
 services:
   app:
-    image: dimokus88/paloma:0.0.17
+    image: dimokus88/universe:0.0.1
 
     
     env:
      - "my_root_password=" # root password for ssh connection. пароль root для подключения по ssh. 
      - "MONIKER=" # node name (If it is not difficult, specify Akash in the node name, for example:DimokusAkash). имя ноды (Если нетрудно, укажите в имени ноды Akash, например:DimokusAkash)
-     - "MNEMONIC=" # seed phrase from the wallet. seed фраза от кошелька .
-     #- "LINK_KEY=" # link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets. ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos.
-     - "SNAP_RPC=http://157.245.76.119:26657"
-     - "PEER=dce45627fce95b5eacc9b931fab5afe70d70e917@135.181.204.159:26656,f64dd167410a242c993648faa6406edf74a7f4b7@157.245.76.119:26656,8fa034efbc4712dfdf656d87036ff80af30a388e@65.108.88.27:26656,4a061ae8ac77422387139fddc2a3d0f9423642c9@217.79.180.189:26656,b2b71c57a8e13114117d59b5c088329641b77b02@194.163.171.222:26656"
+     - "MNEMONIC=" # seed phrase from the  wallet. seed фраза от кошелька .
+     - "LINK_KEY=" # link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets. ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos.
+     #- "SNAP_RPC="
+     - "PEER=0f4411c257bfe7bf191c2c3fd32b385a363487cf@testnet.palomaswap.com:26656"
      
     expose:
       - port: 80
@@ -29,11 +29,11 @@ profiles:
     app:
       resources:
         cpu:
-          units: 4.0
+          units: 2.0
         memory:
-          size: 8Gi
+          size: 4Gi
         storage:
-          size: 100Gi
+          size: 70Gi
         
         
   placement:
@@ -46,7 +46,7 @@ profiles:
       pricing:
         app:
           denom: uakt
-          amount: 10000
+          amount: 1000
 deployment:
   app:
     akash:
