--- a/deploy.yml
+++ b/deploy.yml
@@ -14,7 +14,7 @@ services:
      - "gitrep=https://github.com/palomachain/paloma/releases/download/v0.2.3-prealpha/paloma_0.2.3-prealpha_Linux_x86_64v3.tar.gz"
      #- "SNAP_RPC="
      - "PEER=175ccd9b448390664ea121427aab20138cc8fcec@134.209.166.5:26656,b159364b4e6a3036c36ef6c7c690c5fbc81fa9c4@65.108.71.92:54056"
-     - "addrbook=https://raw.githubusercontent.com/palomachain/testnet/master/paloma-testnet-4/addrbook.json"
+     - "addrbook=https://api.nodes.guru/paloma_addrbook.json"
      
     expose:
       - port: 80
