--- a/deploy.yml
+++ b/deploy.yml
@@ -8,12 +8,12 @@ services:
     
     env:
      - "my_root_password=" # root password for ssh connection. пароль root для подключения по ssh. 
-     - "MONIKER=" # node name (If it is not difficult, specify Akash in the node name, for example:DimokusAkash). имя ноды (Если нетрудно, укажите в имени ноды Akash, например:DimokusAkash)
-     - "MNEMONIC=" # seed phrase from the  wallet. seed фраза от кошелька .
-     - "LINK_KEY=" # link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets. ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos.
+     - "MONIKER=" #имя ноды (Если нетрудно, укажите в имени ноды Akash, например:DimokusAkash). node name (If it is not difficult, specify Akash in the node name, for example:DimokusAkash). 
+     - "MNEMONIC=" # seed phrase from the Paloma wallet. seed фраза от кошелька Paloma.
+     - "LINK_KEY=" # Ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos. link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets.
      - "gitrep=https://github.com/palomachain/paloma/releases/download/v0.2.4-prealpha/paloma_0.2.4-prealpha_Linux_x86_64.tar.gz"
      - "addrbook=https://raw.githubusercontent.com/Dimokus88/Paloma/main/addrbook.json"
-     - "autodelegate=yes"
+     - "autodelegate=yes" # включение\открлючение автоделегирования, награды собираются автоматически.
      
     expose:
       - port: 80
