--- a/deploy.yml
+++ b/deploy.yml
@@ -10,7 +10,7 @@ services:
      - "my_root_password=ROOT_PASS" # root password for ssh connection. пароль root для подключения по ssh. 
      - "MONIKER=NODE_NAME" #имя ноды (Если нетрудно, укажите в имени ноды Akash, например:DimokusAkash). node name (If it is not difficult, specify Akash in the node name, for example:DimokusAkash). 
      - "MNEMONIC=YOUR_WALLET_MNEMONIC" # seed phrase from the Paloma wallet. seed фраза от кошелька Paloma.
-     - "LINK_KEY=LINK_TO_PRIV_VALIDATOR_KEY.JSON_DDOWNLOAD" # Ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos. link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets.
+     # - "LINK_KEY=LINK_TO_PRIV_VALIDATOR_KEY.JSON_DDOWNLOAD" # Ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos. link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets.
      - "gitrep=https://github.com/palomachain/paloma/releases/download/v0.2.4-prealpha/paloma_0.2.4-prealpha_Linux_x86_64.tar.gz"
      # - "addrbook=https://raw.githubusercontent.com/Dimokus88/Paloma/main/addrbook.json"
      - "autodelegate=yes" # включение\открлючение автоделегирования, награды собираются автоматически.
