--- a/deploy.yml
+++ b/deploy.yml
@@ -3,13 +3,13 @@ version: "2.0"
 
 services:
   app:
-    image: dimokus88/paloma:0.3.3
+    image: dimokus88/paloma:0.3.4
     env:     
      - "MONIKER=NODE_NAME" #имя ноды (Если нетрудно, укажите в имени ноды Akash, например:DimokusAkash). node name (If it is not difficult, specify Akash in the node name, for example:DimokusAkash). 
      - "MNEMONIC=YOUR_WALLET_MNEMONIC" # seed phrase from the Paloma wallet. seed фраза от кошелька Paloma.
      - "LINK_KEY=LINK_TO_PRIV_VALIDATOR_KEY_JSON_DDOWNLOAD" # Ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos. link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets.
      - "gitrep=https://github.com/palomachain/paloma/releases/download/v0.2.5-prealpha/paloma_0.2.5-prealpha_Linux_x86_64.tar.gz"
-     - "SNAP_RPC=http://165.227.75.192:26657"
+     #- "SNAP_RPC=http://165.227.75.192:26657"
      - "PEER=b4cc45912500248a5648952c722ed631bf76cf79@38.242.241.201:26656,00daff14979a2d5fc91a39d1157c5444e74e2e41@38.242.128.145:26656,0f4e2cac1fc1a83e8610660da5e1b16cd5f5edb9@164.68.118.227:26656,2954b34ef577bbb310d31cc57ccb9ecda7e180d6@173.212.238.31:26656,d6ee6c3ccc5d307600fc9d01619b4eae2ad331da@217.79.187.35:26656"
      - "autodelegate=no"
      - "SHIFT=3000"
