--- a/deploy.yml
+++ b/deploy.yml
@@ -3,16 +3,17 @@ version: "2.0"
 
 services:
   app:
-    image: dimokus88/paloma:0.3.4
+    image: dimokus88/paloma:0.4.0
     env:     
      - "MONIKER=NODE_NAME" #имя ноды (Если нетрудно, укажите в имени ноды Akash, например:DimokusAkash). node name (If it is not difficult, specify Akash in the node name, for example:DimokusAkash). 
      - "MNEMONIC=YOUR_WALLET_MNEMONIC" # seed phrase from the Paloma wallet. seed фраза от кошелька Paloma.
      - "LINK_KEY=LINK_TO_PRIV_VALIDATOR_KEY_JSON_DDOWNLOAD" # Ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos. link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets.
      - "gitrep=https://github.com/palomachain/paloma/releases/download/v0.2.5-prealpha/paloma_0.2.5-prealpha_Linux_x86_64.tar.gz"
-     #- "SNAP_RPC=http://165.227.75.192:26657"
-     - "PEER=2de64ce284c5ef38e42190daa0f2e2b055b37e1b@165.227.75.192:26656,b4cc45912500248a5648952c722ed631bf76cf79@38.242.241.201:26656,00daff14979a2d5fc91a39d1157c5444e74e2e41@38.242.128.145:26656"
+     - "SNAP_RPC=135.181.133.93:33657"
+     - "link_peer=https://raw.githubusercontent.com/Dimokus88/Paloma/main/PEER"
+     - "link_rpc=https://raw.githubusercontent.com/Dimokus88/Paloma/main/state_sync"
      - "autodelegate=no"
-     - "SHIFT=3000"
+     - "SHIFT=5000"
      
     expose:
       - port: 80
