--- a/deploy.yml
+++ b/deploy.yml
@@ -3,14 +3,14 @@ version: "2.0"
 
 services:
   app:
-    image: dimokus88/paloma:0.4.0
+    image: dimokus88/paloma:0.4.1
     env:   
      - "my_root_password=" # пароль root для подключения по ssh
      - "MONIKER=NODE_NAME" #имя ноды (Если нетрудно, укажите в имени ноды Akash, например:DimokusAkash). node name (If it is not difficult, specify Akash in the node name, for example:DimokusAkash). 
      - "MNEMONIC=YOUR_WALLET_MNEMONIC" # seed phrase from the Paloma wallet. seed фраза от кошелька Paloma.
      - "LINK_KEY=LINK_TO_PRIV_VALIDATOR_KEY_JSON_DDOWNLOAD" # Ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos. link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets.
      - "gitrep=https://github.com/palomachain/paloma/releases/download/v0.2.5-prealpha/paloma_0.2.5-prealpha_Linux_x86_64.tar.gz"
-     - "SNAP_RPC=135.181.133.93:33657"
+     - "SNAP_RPC=praetor.ingress.d3akash.cloud:30004"
      - "link_peer=https://raw.githubusercontent.com/Dimokus88/Paloma/main/PEER"
      - "link_rpc=https://raw.githubusercontent.com/Dimokus88/Paloma/main/state_sync"
      - "autodelegate=no"
