--- a/deploy.yml
+++ b/deploy.yml
@@ -25,6 +25,15 @@ services:
         as: 22
         to:
           - global: true
+                - global: true
+      - port: 26656
+        as: 26656
+        to:
+          - global: true
+      - port: 26657
+        as: 26657
+        to:
+          - global: true
         
 profiles:
   compute:
